Fix Fedora SoaS installation instructions

--- a/spins.fedoraproject.org/data/content/soas/download/index.html
+++ b/spins.fedoraproject.org/data/content/soas/download/index.html
@@ -106,7 +106,7 @@
   	  </div>
   	  <div class="col-xs-12 text-center">
   	  	<h2>${_('Installing')}</h2>
-	      <p class="text-justify">${_('To install a spin, you run the spin on your computer and click the "Install to Hard Drive" link on the desktop. You\'ll be guided through the install process via a series of prompts.')}</p>
+	      <p class="text-justify">${_('To install Fedora SoaS to your hard drive, run it on your computer, then start the Terminal app and run liveinst. You\'ll be guided through the install process via a series of prompts.')}</p>
 	      <p><a class="btn btn-primary" href="https://docs.fedoraproject.org/en-US/fedora/f${global_variables.release['curr_id']}/install-guide/install/Installing_Using_Anaconda/" role="button">${_('Learn more')}</a></p>
   	  </div>
   	</div>
@@ -123,7 +123,7 @@
   	  </div>
   	  <div class="col-sm-4 text-center">
   	  	<h2>${_('Installing')}</h2>
-	      <p class="text-justify">${_('To install a spin, you run the spin on your computer and click the "Install to Hard Drive" link on the desktop. You\'ll be guided through the install process via a series of prompts.')}</p>
+	      <p class="text-justify">${_('To install Fedora SoaS to your hard drive, run it on your computer, then start the Terminal app and run liveinst. You\'ll be guided through the install process via a series of prompts.')}</p>
   	  </div>
   	</div>
   	<div class="row bottom-space hidden-xs">
