--- a/getfedora.org/data/content/workstation/prerelease/index.html
+++ b/getfedora.org/data/content/workstation/prerelease/index.html
@@ -66,12 +66,11 @@
             </ul>
 						<p><strong>${_('WARNING: This procedure destroys all data on your USB media. Make sure to back up any important files from your USB media before you do this.')}</strong></p>
 						<ol>
-							<li>${_('Download the Fedora Media Writer app below.')}</li>
-							<li>${_('Download the desired ISO image.')}</li>
+							<li>${_('Download and install the Fedora Media Writer app below.')}</li>
+							<li>${_('Download the Fedora Workstation prerelease ISO image.')}</li>
 							<li>${_('Open the Fedora Media Writer app. You may need to provide a password to give the app the right permissions.')}</li>
-							<li>${_('Select "Custom OS..." from the list.')}</li>
-							<li>${_('On the Custom OS page, select the "Select Live ISO" button.')}</li>
-							<li>${_('In the file selection window, locate and select the ISO image you downloaded.')}</li>
+							<li>${_('Select "Custom Image." from the list.')}</li>
+							<li>${_('In the file selection window, locate and select the prerelease ISO image you downloaded.')}</li>
 							<li>${_('Insert your USB stick in the computer. If you used your USB stick previously to create live media, you may need to restore it to factory settings.  The app will ask you whether to do so in this case.')}</li>
 							<li>${_('Select "Create Live USB" to write the image. Wait until the process is finished before you remove the media and close the app.')}</li>
 						</ol>
