--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -17,8 +17,8 @@
           <div class="col-xs-12 col-md-8 col-md-offset-2">
           <div id="welcome" class="non-jumbo text-center">
               <img src="${path}/static/images/flocklogo2.png" alt="Flock"/>
-            <h1>Dresden</h1>
-            <h2>2018</h2>
+            <h1>Budapest</h1>
+            <h2>2019</h2>
           </div>
           </div>
         </div>
@@ -33,7 +33,7 @@
           <p>Flock is the Fedora Project's annual contributor-focused conference. It alternates between European and North American locations. The conference provides a venue for face to face meetings and conversations.  It is also a place to celebrate our community.</p>
 
           <h2>What will we do at Flock?</h2>
-          <p>The <a href="https://flock2018.sched.com/">schedule</a> is now available.  Changes are still possible.</p>
+<!--          <p>The <a href="https://flock2018.sched.com/">schedule</a> is now available.  Changes are still possible.</p> -->
           <ul>
               <li align="left"><b>Communicate the Fedora Strategy.</b> Everyone in Fedora should understand and feel well-aligned with the project's goals, both long-term and tactical. We should all understand the messaging we're using to attract new users and contributors.m</li>
               <li align="left"><b>Plan the Next Strategy.</b> This strategy doesn't come from the top down, or from thin air, and it's not dictated by our sponsors. It comes from the community. Because we're so big and distributed, Flock can't be the only place where we get new ideas, but it is a summit where we present, learn about, and discuss them.</li>
@@ -61,7 +61,7 @@
           </p>
 -->
           <h2>Event Dates</h2>
-          <p>Flock will begin the morning of Wednesday, August 8. Sessions will continue each day until Saturday, August 11. You should plan to arrive on Tuesday, August 7 and to depart no sooner than Saturday afternoon for the best experience.</p>
+          <p>Flock will begin the morning of Thursday, August 8. Sessions will continue each day until Sunday, August 11. You should plan to arrive by Wednesday, August 7 and to depart no sooner than Sunday afternoon for the best experience.</p>
                      
           <table class="calendar">
               <tr>
@@ -76,23 +76,24 @@
               <tr class="flock">
                 <td></td>
                 <td></td>
-                <td class="flock" colspan="4">Flock</td>
                 <td></td>
+                <td class="flock" colspan="4">Flock</td>
               </tr>
               <tr>
+                <td>Aug <span>5</span></td>
                 <td>Aug <span>6</span></td>
                 <td>Aug <span>7</span></td>
                 <td class="flock">Aug <span>8</span></td>
                 <td class="flock">Aug <span>9</span></td>
                 <td class="flock">Aug <span>10</span></td>
                 <td class="flock">Aug <span>11</span></td>
-                <td>Aug <span>12</span></td>
               </tr>
             </table>
 
             <h2>Schedule</h2>
-            <p>The <a href="https://flock2018.sched.com/">schedule</a> is now available.  Changes are still possible.</p>
+	      <p>Coming soon...</p>
 <!--
+            <p>The <a href="https://flock2018.sched.com/">schedule</a> is now available.  Changes are still possible.</p>
             <h2>Tentative Schedule</h2>
             <p>The <a href="https://flock2018.sched.com/">schedule</a> is now available.  Changes are still possible.</p>
             <ul>
@@ -115,8 +116,9 @@
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
             <h2>Call for Proposals</h2>
-            <p>The CfP is now closed and the <a href="https://flock2018.sched.com/">schedule</a> is now available.  Changes are still possible.</p>
+	      <p>Coming soon...</p>
  <!-- 
+            <p>The CfP is now closed and the <a href="https://flock2018.sched.com/">schedule</a> is now available.  Changes are still possible.</p>
             <p>We invite you to submit proposals for talks (60 minutes) or workshops( 2 hours),  or hackfests/FADs (half or full day) on topics of importance to the contributor community.</p>
             <p>Topic ideas include:</p>
             <ul>
@@ -145,9 +147,11 @@
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <h2>Registration Information</h2>
+	  <p>Coming soon...</p>
+<!--
           <p><mark>Late Registration for Flock is still open.</mark>  You may also register on-site.  Late registrants are not guranteed all benefits of registration including swag and food.  These will provided if we have capacity.  This year we are handling registration via EventBrite.  You can find the <a href="https://www.eventbrite.com/e/flock-to-fedora-2018-tickets-46180853175?aff=es2">Flock 2018 event</a> online now.</p>
           <p>We are no longer issuing visa letters as the event is less than one month away.  All travel funding has been issued.</p>
-<!--
+
           <p><mark>Registration for Flock is open.</mark></p>
           <p>This year we are handling registration via EventBrite.  You can find the <a href="https://www.eventbrite.com/e/flock-to-fedora-2018-tickets-46180853175?aff=es2">Flock 2018 event</a> online now. If you need a visa letter to attend Flock, please complete the <a href="https://docs.google.com/forms/d/13ndmY6f69nUh42lJTqcLMhPNmM8vrqlwGhqF0dc-Vxg/edit">Visa Letter Request Form</a>.</p>
           <p>Flock 2018 will, again, feature a small optional registration fee to help offset the costs of swag and lunch.  This fee is scaled by country using the <a href="http://www.economist.com/content/big-mac-index">Big Mac Index</a> and is based on a $25 Fee in the United States.</p>
@@ -155,6 +159,7 @@
           <p>Attendees who registered and paid the registration fee by July 2, 2018 are included in the count for items that have to be confirmed in advance.  This includes lunch, swag, etc.  If you registered and/or paid after this date, you may not receive all of the benefits of registration.</p>
           <p>If you did not register, you are still welcome to attend the conference and events. However, you will not receive benefits such as lunch and a shirt.</p>
 -->
+
         </div>
       </div>
     </div>
@@ -223,14 +228,16 @@
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <h2>Venue and Hotel</h2>
+	  <p>Coming soon...</p>
+<!--
           <div class="col-xs-12 col-md-7">
           <p><a href="https://www.radissonblu.com/en/parkhotel-dresdenradebeul">The Radisson Blu Park Hotel &amp; Conference Centre, Dresden Radebeul, Germany</a> is both the conference venue as well as the conference hotel.</p>
 	  <ul style="padding-left: 1em;">
           <li>Flock Conference room rates of <strong>100 EUR/night</strong> per double occupancy room and <strong>75 EUR/night</strong> per single occupancy room have been arranged. Rooms include breakfast</li>
           <li>To obtain the Flock rate, please email <a href="mailto:events@parkhotel-radebeul.com">events@parkhotel-radebeul.com</a> with your name, contact details, date of arrival and departure and mention the "Flock Fedora Conference."  You will receive a confirmation and reservation number back by email.</li>
-<!--
+
     <li><strong><strike>July 26</strike>August 4 - Extended</strong> is the cut-off for our reserved block. If reserving for yourself, please book before then!</li>
--->
+
 	  </ul>
 	  <p><strong>Please Note:</strong> If you receive financial assistance to attend Flock, the organizers will book your travel arrangements (flight, hotel, bus) for you.</p>
         </div>
@@ -244,20 +251,20 @@
            </address>
            <p>Radebuel is a suburb of Dresden featuring easy direct access to the city center via tram and bus.</p>
            </div>
+-->
+      </div>
+    </div>
+<!--
+      <div class="row">
+        <div class="col-xs-12" id="telegram">
+          <p>Here is a <a href="https://fedoraproject.org/wiki/GettingAroundInDresden">detailed overview of transportation options and some general information about Dresden</a>.</p>
+	</div>
+      </div>
+-->
+      </div>
+    </div>
 
-      </div>
-    </div>
-          <div class="row">
-            <div class="col-xs-12" id="telegram">
-            <p>
-            Here is
-            a <a href="https://fedoraproject.org/wiki/GettingAroundInDresden">detailed overview of transportation options and some general information about Dresden</a>.
-            </p>
-      </div>
-      </div>
-    </div>
-    </div>
-
+    
 <!--
     <div id="events" class="non-jumbo light-blue text-center">
       <div class="container">
@@ -288,10 +295,12 @@
             <a href="https://www.redhat.com"><img src="../../static/images/sponsors/redhat.png"/></a>
           </p>
           <br/>
+<!--
           <h3>Gold Level</h3>
           <p>
             <a href="https://www.arm.com/"><img src="../../static/images/Arm_logo_blue_150MN.png"/></a>
           </p>
+-->
 <!--
           <p>
             <a href="https://developer.capitalone.com/open-source/"><img src="../../static/images/capitalone-devexchange.png"/></a>
