[iot] syntax fix
Signed-off-by: Rick Elrod <rick@elrod.me>

--- a/iot.fedoraproject.org/data/content/index.html
+++ b/iot.fedoraproject.org/data/content/index.html
@@ -27,7 +27,7 @@
       <div class="row">
 	    <div class="col-xs-12 caption">
 	      <h2 class="text-center">${Markup(_('What is Fedora Internet of Things Edition?'))}</h2>
-	      <p class="thin text-justify">${_('Fedora Internet of Things is a Fedora Edition focused on being a strong foundation for IoT ecosystems. Whether you're working on a project at home, industrial gateways, smart cities or analytics with AI/ML, Fedora IoT provides a trusted open source platform to build on. Fedora IoT produces a regular rolling release to help you keep your ecosystem up-to-date.')}</p>
+	      <p class="thin text-justify">${_('Fedora Internet of Things is a Fedora Edition focused on being a strong foundation for IoT ecosystems. Whether you\'re working on a project at home, industrial gateways, smart cities or analytics with AI/ML, Fedora IoT provides a trusted open source platform to build on. Fedora IoT produces a regular rolling release to help you keep your ecosystem up-to-date.')}</p>
         </div>
       </div>
     </div>
