[iot] Use the real verify page
Signed-off-by: Rick Elrod <rick@elrod.me>

--- a/iot.fedoraproject.org/data/content/index.html
+++ b/iot.fedoraproject.org/data/content/index.html
@@ -55,7 +55,7 @@
               <h3>${k1}</h3>
             </div>
             <div class="col-md-4 text-right">
-              <p class="download text-right"><a href="${v1}">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
+              <p class="download text-right"><a href="${v1}">${_('Download')}</a> | <a href="https://getfedora.org/verify">${_('Verify')}</a></p>
             </div>
           </div>
 
@@ -68,7 +68,7 @@
               <h3>${k1}</h3>
             </div>
             <div class="col-md-4 text-right">
-              <p class="download text-right"><a href="${v1}">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
+              <p class="download text-right"><a href="${v1}">${_('Download')}</a> | <a href="https://getfedora.org/verify">${_('Verify')}</a></p>
             </div>
           </div>
 
