--- a/getfedora.org/data/content/workstation/prerelease/index.html
+++ b/getfedora.org/data/content/workstation/prerelease/index.html
@@ -139,6 +139,12 @@
           </ul>
           </p>
 
+          <h4>${_('Try Fedora Silverblue')}</h4>
+          <p><i class="fa fa-fw fa-sm header-icon fa-download"></i>
+            <a class="ws-download-splash" href="${global_variables.path['download']}/test/${global_variables.release['next_silverblue_id']}_Beta/Silverblue/x86_64/iso/Fedora-Silverblue-ostree-x86_64-${global_variables.release['next_silverblue_id']}_Beta-${global_variables.release['RC_pre_gold']}.iso">${Markup(_('64-bit %sGB Silverblue image')) % global_variables.iso_size['x64_silverblue']}</a>
+          </p>
+          <p><i class="fa fa-fw fa-sm header-icon fa-book"></i><a href="//silverblue.fedoraproject.org/">${_('Learn more')}</a></p>
+
           <div class="top-space bottom-margin"><h4>${_('Resources')}</h4></div>
           <p><i class="fa fa-fw fa-sm header-icon fa-globe"></i>${Markup(_('&lt;a href="%(commonbugs_url)s"&gt;&lt;strong&gt;Common Bugs&lt;/strong&gt;&lt;/a&gt;') % {'commonbugs_url': 'https://fedoraproject.org/wiki/Common_F%s_bugs' % (global_variables.release['next_id'])})}</p>
           <div class="pull-right bottom-step"><p>${_('An excellent resource to consult in case you run into any issues installing or running Fedora.')}</p></div>
