--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -147,18 +147,21 @@
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <h2>Registration Information</h2>
-	  <p>Coming soon...</p>
 <!--
+	  <p>Coming soon...</p>
           <p><mark>Late Registration for Flock is still open.</mark>  You may also register on-site.  Late registrants are not guranteed all benefits of registration including swag and food.  These will provided if we have capacity.  This year we are handling registration via EventBrite.  You can find the <a href="https://www.eventbrite.com/e/flock-to-fedora-2018-tickets-46180853175?aff=es2">Flock 2018 event</a> online now.</p>
           <p>We are no longer issuing visa letters as the event is less than one month away.  All travel funding has been issued.</p>
+-->
 
           <p><mark>Registration for Flock is open.</mark></p>
-          <p>This year we are handling registration via EventBrite.  You can find the <a href="https://www.eventbrite.com/e/flock-to-fedora-2018-tickets-46180853175?aff=es2">Flock 2018 event</a> online now. If you need a visa letter to attend Flock, please complete the <a href="https://docs.google.com/forms/d/13ndmY6f69nUh42lJTqcLMhPNmM8vrqlwGhqF0dc-Vxg/edit">Visa Letter Request Form</a>.</p>
-          <p>Flock 2018 will, again, feature a small optional registration fee to help offset the costs of swag and lunch.  This fee is scaled by country using the <a href="http://www.economist.com/content/big-mac-index">Big Mac Index</a> and is based on a $25 Fee in the United States.</p>
+          <p>This year we are handling registration via EventBrite.  You can find the <a href="https://www.eventbrite.com/e/flock-to-fedora-2019-tickets-55502933769">Flock 2019 event</a> online now. If you need or think you will need a visa letter to attend Flock, please complete the <a href="https://docs.google.com/forms/d/e/1FAIpQLSexQqHA9gN-KuxT6GAxqN-jt3OXRXThh9qREIkowFLUZ0G7tA/viewform">Event Visa Invitation Letter Request Form</a>.</p>
+          <p>Flock 2019 will, again, feature a small optional registration fee to help offset the costs of swag and lunch.  This fee is scaled by country using the <a href="http://www.economist.com/content/big-mac-index">Big Mac Index</a> and is based on a $25 Fee in the United States.</p>
+          <p>Information about how to apply for travel funding will be released soon. You should go ahead and register before you have received your funding decision.</p>
+<!--
           <p>If you need travel funding for Flock, you may apply using the <a href="https://docs.google.com/forms/d/e/1FAIpQLSf9KR0oXmBiIl2I12hn3dln2795zDCFSMEFf9rtGngd7pl1dQ/viewform?usp=sf_link">funding request form</a>. You can (and should) wait to register until you have received your funding decision.  Funding decisions begin being made on 25 June, 2018 and will be made on a continuously rolling basis from then.</p>
-          <p>Attendees who registered and paid the registration fee by July 2, 2018 are included in the count for items that have to be confirmed in advance.  This includes lunch, swag, etc.  If you registered and/or paid after this date, you may not receive all of the benefits of registration.</p>
-          <p>If you did not register, you are still welcome to attend the conference and events. However, you will not receive benefits such as lunch and a shirt.</p>
 -->
+          <p>Attendees who registered and paid the registration fee by July 8, 2018 are included in the count for items that have to be confirmed in advance.  This includes lunch, swag, etc.  If you registered and/or paid after this date, you may not receive all of the benefits of registration.</p>
+          <p>If you did not register, you are still welcome to attend the conference and events. However, you may not receive benefits such as lunch and a shirt.</p>
 
         </div>
       </div>
@@ -228,30 +231,34 @@
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <h2>Venue and Hotel</h2>
-	  <p>Coming soon...</p>
 <!--
+	  <p>Coming soon...</p>
+-->
           <div class="col-xs-12 col-md-7">
-          <p><a href="https://www.radissonblu.com/en/parkhotel-dresdenradebeul">The Radisson Blu Park Hotel &amp; Conference Centre, Dresden Radebeul, Germany</a> is both the conference venue as well as the conference hotel.</p>
+      <p><a href="https://www.danubiushotels.com/helia">The Danubius Hotel HELIA</a> in Budapest, Hungary is both the conference venue as well as the conference hotel.</p>
 	  <ul style="padding-left: 1em;">
-          <li>Flock Conference room rates of <strong>100 EUR/night</strong> per double occupancy room and <strong>75 EUR/night</strong> per single occupancy room have been arranged. Rooms include breakfast</li>
-          <li>To obtain the Flock rate, please email <a href="mailto:events@parkhotel-radebeul.com">events@parkhotel-radebeul.com</a> with your name, contact details, date of arrival and departure and mention the "Flock Fedora Conference."  You will receive a confirmation and reservation number back by email.</li>
+          <li>Flock Conference room rates of <strong>140 EUR/night</strong> per double occupancy room and <strong>128 EUR/night</strong> per single occupancy room have been arranged. Rooms include breakfast, wifi, and unlimited use of the Danubius Premier Fitness Club.</li>
+          <!-- the builder doesn't like this url :(
+          <li>To obtain the Flock rate, please <a href="https://booking.danubiushotels.com/ibe/details.aspx?langid=6&propertyid=14787&nights=1&checkin=07/08/2019&group=REDH070819_001&utm_source=ibe&utm_medium=link&utm_campaign=mice">register online</a>.</li>
+          -->
+          <li>To obtain the Flock rate, please <a href="https://bit.ly/2PtbLOV">register online</a>.</li>
 
-    <li><strong><strike>July 26</strike>August 4 - Extended</strong> is the cut-off for our reserved block. If reserving for yourself, please book before then!</li>
+    <li><strong>July 4</strong> is the cut-off for our reserved block. If reserving for yourself, please book before then! After this date, rates are best available.</li>
 
 	  </ul>
 	  <p><strong>Please Note:</strong> If you receive financial assistance to attend Flock, the organizers will book your travel arrangements (flight, hotel, bus) for you.</p>
         </div>
            <div class="col-xs-12 col-md-5">
            <address>
-             <h4><a href="https://www.radissonblu.com/en/parkhotel-dresdenradebeul">The Radisson Blu Park Hotel &amp; Conference Centre, Dresden Radebeul, Germany</a></h4>
-             Nizzastrasse 55<br/>
-             Radebeul D-01445 Dresden Germany <br/>
-             +49 351 8321-035<br/>
-             <a href="mailto:events@parkhotel-radebeul.com">events@parkhotel-radebeul.com</a>
+             <h4><a href="https://www.danubiushotels.com/helia">The Danubius Hotel HELIA</a></h4>
+             H-1133 Budapest, Kárpát utca 62-64<br/>
+             <br/>
+             Danubius Zrt.<br/>
+             1051 Budapest, Szent István tér 11.<br/>
+             Cégbírósag neve: Fővárosi Biroság Cégbírósága<br/>
+             Cégjegyzékszám: 01-10-041120<br/>
            </address>
-           <p>Radebuel is a suburb of Dresden featuring easy direct access to the city center via tram and bus.</p>
            </div>
--->
       </div>
     </div>
 <!--
