add OpenSUSE as a Flock sponsor

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -302,13 +302,14 @@
             <a href="https://www.redhat.com"><img src="../../static/images/sponsors/redhat.png"/></a>
           </p>
           <br/>
-<!--
           <h3>Gold Level</h3>
+          <p>
+            <a href="https://www.opensuse.org/"><img src="../../static/images/opensuse.png"/></a>
+          </p>
+<!--
           <p>
             <a href="https://www.arm.com/"><img src="../../static/images/Arm_logo_blue_150MN.png"/></a>
           </p>
--->
-<!--
           <p>
             <a href="https://developer.capitalone.com/open-source/"><img src="../../static/images/capitalone-devexchange.png"/></a>
           </p>
