--- a/arm.fedoraproject.org/data/content/index.html
+++ b/arm.fedoraproject.org/data/content/index.html
@@ -183,7 +183,7 @@
         <p>${_('These images are for ARM-based mediacenters, kiosks, laptops, and other ARM-powered devices where a graphical interface is desired.')}</p>
         </div>
         <div class="col-lg-9">
-          <div class="white">
+          <!--<div class="white">
             <div class="col-lg-1">
             <img src="/static/images/workstation.png" />
             </div>
@@ -196,7 +196,7 @@
             <div class="col-lg-4">
             <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Workstation/armhfp/images/Fedora-Workstation-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
             </div>
-          </div>
+	  </div>-->
           <div class="white">
             <div class="col-lg-1">
             <img src="/static/images/kde.png" />
@@ -264,7 +264,7 @@
             <p>${Markup(_('%sGB raw image')) % global_variables.iso_size['ARM_Mate']}</p>
             </div>
             <div class="col-lg-4">
-            <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Spins/armhfp/images/Fedora-Mate-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
+            <p class="download"><a href="https://download.fedoraproject.org/pub/alt/unofficial/releases/${global_variables.release['curr_id']}/armhfp/Fedora-Mate-armhfp-${global_variables.release['curr_arm_id']}-20190427.n.0-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
             </div>
           </div>
           <div class="white">
@@ -300,7 +300,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="white">
+        <!--<div class="white">
           <div class="col-xs-3">
           <img src="/static/images/workstation.png" />
           </div>
@@ -308,7 +308,7 @@
           <h3>${_('Fedora Workstation')}</h3>
           <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Workstation/armhfp/images/Fedora-Workstation-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
           </div>
-        </div>
+	</div>-->
         <div class="white">
           <div class="col-xs-3">
           <img src="/static/images/kde.png" />
@@ -381,7 +381,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="white">
+        <!--<div class="white">
           <div class="col-sm-3">
           <img src="/static/images/workstation.png" />
           </div>
@@ -391,7 +391,7 @@
           <div class="col-sm-4">
           <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Workstation/armhfp/images/Fedora-Workstation-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
           </div>
-        </div>
+	</div>-->
         <div class="white">
           <div class="col-sm-3">
           <img src="/static/images/kde.png" />
