--- a/labs.fedoraproject.org/data/content/design-suite/download/index.html
+++ b/labs.fedoraproject.org/data/content/design-suite/download/index.html
@@ -19,7 +19,7 @@
         <div class="col-md-7 col-md-offset-5 text-left">
           <h2>${Markup(_('Download Fedora %(rel)s Design Suite')) % {'rel':global_variables.release['curr_id']}}</h2>
           <!--<p class="gr"><a class="btn btn-success design-download-splash" href="${global_variables.path['download_spins']}/${global_variables.release['curr_id']}/Labs/x86_64/iso/Fedora-Design_suite-Live-x86_64-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso" role="button">${_('Download')}</a></p>-->
-          <p class="gr"><a class="btn btn-success design-download-splash" href="https://dl.fedoraproject.org/pub/alt/unofficial/releases/29/x86_64/Fedora-Design_suite-Live-x86_64-29-20181029.1.iso" role="button">${_('Download')}</a></p>
+          <p class="gr"><a class="btn btn-success design-download-splash" href="https://download.fedoraproject.org/pub/alt/unofficial/releases/30/x86_64/Fedora-Design_suite-Live-x86_64-30-20190427.n.1.iso" role="button">${_('Download')}</a></p>
             <h5>${Markup(_('%s GB ISO Image for 64-bit PC')) % global_variables.iso_size['x86_64_Live_Design']}</h5>
         </div>
       </div>
@@ -40,8 +40,8 @@
           <h4>${_('Direct Downloads')}</h4>
           <ul>
               <li>
-              <!--<p><a class="design-download-splash" href="${global_variables.path['download_arch']}/${global_variables.release['curr_id']}/Labs/i386/iso/Fedora-Design_suite-Live-i386-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${Markup(_('32-bit %sGB Live image')) % global_variables.iso_size['i686_Live_Design']}</a></p>-->
-                  <p><a class="design-download-splash" href="https://dl.fedoraproject.org/pub/alt/unofficial/releases/29/i386/Fedora-Design_suite-Live-i386-29-20181029.1.iso">${Markup(_('32-bit %sGB Live image')) % global_variables.iso_size['i686_Live_Design']}</a></p>
+              <p><a class="design-download-splash" href="${global_variables.path['download_arch']}/${global_variables.release['curr_id']}/Labs/i386/iso/Fedora-Design_suite-Live-i386-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${Markup(_('32-bit %sGB Live image')) % global_variables.iso_size['i686_Live_Design']}</a></p>
+	      <!--<p><a class="design-download-splash" href="https://dl.fedoraproject.org/pub/alt/unofficial/releases/29/i386/Fedora-Design_suite-Live-i386-29-20181029.1.iso">${Markup(_('32-bit %sGB Live image')) % global_variables.iso_size['i686_Live_Design']}</a></p>-->
               </li>
           </ul>
           <h4>${_('Older Releases')}</h4>
