update cfp for flock

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -116,10 +116,11 @@
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
             <h2>Call for Proposals</h2>
-	      <p>Coming soon...</p>
  <!-- 
+	      <p>Coming soon...</p>
             <p>The CfP is now closed and the <a href="https://flock2018.sched.com/">schedule</a> is now available.  Changes are still possible.</p>
-            <p>We invite you to submit proposals for talks (60 minutes) or workshops( 2 hours),  or hackfests/FADs (half or full day) on topics of importance to the contributor community.</p>
+ -->
+            <p>We invite you to submit proposals for talks (25/50 minutes) or workshops( 2 hours),  or hackfests/FADs (half or full day) on topics of importance to the contributor community.</p>
             <p>Topic ideas include:</p>
             <ul>
                 <li align="left">Pitch an idea!  Have the next Fedora Rings, or Fedora Editions plan, or rpm-ostree, or something entirely new? Have something that bugs you and a plan to fix it? Think we should grow our userbase in a particular area by doing something we aren't? Pitch it!</li>
@@ -132,11 +133,10 @@
             <p>We are accepting proposals as issues in the <a href="https://pagure.io/flock/issues">Flock repository on Pagure</a>.  We are doing this so that you can solicit feedback on your proposal, look for collaborators, and figure out who you need in the room and who will be there.  Specific instructions are in the Pagure repo.</p>
             <p>Proposals are evaluated in three rounds and must be submitted by the beginning of the final round.  This allows us to confirm talks for speakers sooner than making everyone wait until then end.  This also incentivizes you to submit early :D.  Unselected proposals carry forward to the next round.</p>
             <ol>
-                <li align="left"><p>Round 1 selection starts on: 15 June 2018</p></li>
-                <li align="left"><p>Round 2 selection starts on: 2 July 2018</p></li>
-                <li align="left"><p>Final selection starts on: 15 July 2018 (absolute last day for CFP submission)</p></li>
+                <li align="left"><p>Round 1 selection starts on: 1 June 2019</p></li>
+                <li align="left"><p>Round 2 selection starts on: 15 June 2019</p></li>
+                <li align="left"><p>Final selection starts on: 1 July 2019></li>
             </ol>
- -->
         </div>
       </div>
     </div>
