flocktofedora: Fix broken URL for Travel Funding Requests form

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -62,7 +62,7 @@
 -->
           <h2>Event Dates</h2>
           <p>Flock will begin the morning of Thursday, August 8. Sessions will continue each day until Sunday, August 11. You should plan to arrive by Wednesday, August 7 and to depart no sooner than Sunday afternoon for the best experience.</p>
-                     
+
           <table class="calendar">
               <tr>
                 <th>Mon</th>
@@ -116,7 +116,7 @@
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
             <h2>Call for Proposals</h2>
- <!-- 
+ <!--
 	      <p>Coming soon...</p>
             <p>The CfP is now closed and the <a href="https://flock2018.sched.com/">schedule</a> is now available.  Changes are still possible.</p>
  -->
@@ -160,7 +160,7 @@
           <p>Information about how to apply for travel funding will be released soon. You should go ahead and register before you have received your funding decision.</p>
 -->
           <p><mark>Travel Funding Requests are now being accepted.</mark></p>
-          <p>If you need travel funding for Flock, you may apply using the <a href=""https://docs.google.com/forms/d/18BYuHS-91gt5_zaNAskn4-aF5cNimshuZzXu4yo_fz4/>funding request form</a>. You should register for Flock as soon as you know you are likely to attend, even if you are waiting on a funding decision or visa letter. Funding decisions begin being made on 1 June, 2019 and will be made on a continuously rolling basis from then.</p>
+          <p>If you need travel funding for Flock, you may apply using the <a href="https://docs.google.com/forms/d/18BYuHS-91gt5_zaNAskn4-aF5cNimshuZzXu4yo_fz4/">funding request form</a>. You should register for Flock as soon as you know you are likely to attend, even if you are waiting on a funding decision or visa letter. Funding decisions begin being made on 1 June, 2019 and will be made on a continuously rolling basis from then.</p>
           <p>Attendees who registered and paid the registration fee by July 8, 2019 are included in the count for items that have to be confirmed in advance.  This includes lunch, swag, etc.  If you registered and/or paid after this date, you may not receive all of the benefits of registration.</p>
           <p>If you did not register, you are still welcome to attend the conference and events. However, you may not receive benefits such as lunch and a shirt.</p>
 
@@ -272,7 +272,7 @@
       </div>
     </div>
 
-    
+
 <!--
     <div id="events" class="non-jumbo light-blue text-center">
       <div class="container">
