fixing </p> error in flocktofedora.org

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -135,7 +135,7 @@
             <ol>
                 <li align="left"><p>Round 1 selection starts on: 1 June 2019</p></li>
                 <li align="left"><p>Round 2 selection starts on: 15 June 2019</p></li>
-                <li align="left"><p>Final selection starts on: 1 July 2019></li>
+                <li align="left"><p>Final selection starts on: 1 July 2019</p></li>
             </ol>
         </div>
       </div>
