flock: Add link to Fedora Project overview
This commit makes two changes:

* Add a link to the Fedora Project overview on docs.fedoraproject.org to
  give more context to what Fedora is for a first-time visitor
* Changed a line to "typically alternates" between NA and EU since this
  year and last year were back-to-back in Europe

Including the project overview URL should also give a boost, however
small, to the SEO presence of the Fedora Docs website.

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -30,7 +30,7 @@
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <h2>What is Flock?</h2>
-          <p>Flock is the Fedora Project's annual contributor-focused conference. It alternates between European and North American locations. The conference provides a venue for face to face meetings and conversations.  It is also a place to celebrate our community.</p>
+          <p>Flock is the <a href="https://docs.fedoraproject.org/en-US/project/" target="_blank">Fedora Project</a>'s annual contributor-focused conference. It typically alternates between European and North American locations. The conference provides a venue for face to face meetings and conversations. It is also a place to celebrate our community.</p>
 
           <h2>What will we do at Flock?</h2>
 <!--          <p>The <a href="https://flock2018.sched.com/">schedule</a> is now available.  Changes are still possible.</p> -->
@@ -62,7 +62,7 @@
 -->
           <h2>Event Dates</h2>
           <p>Flock will begin the morning of Thursday, August 8. Sessions will continue each day until Sunday, August 11. You should plan to arrive by Wednesday, August 7 and to depart no sooner than Sunday afternoon for the best experience.</p>
-                     
+
           <table class="calendar">
               <tr>
                 <th>Mon</th>
@@ -116,7 +116,7 @@
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
             <h2>Call for Proposals</h2>
- <!-- 
+ <!--
 	      <p>Coming soon...</p>
             <p>The CfP is now closed and the <a href="https://flock2018.sched.com/">schedule</a> is now available.  Changes are still possible.</p>
  -->
@@ -272,7 +272,7 @@
       </div>
     </div>
 
-    
+
 <!--
     <div id="events" class="non-jumbo light-blue text-center">
       <div class="container">
