added note about visa letter closing

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -154,7 +154,7 @@
 -->
 
           <p><mark>Registration for Flock is open.</mark></p>
-          <p>This year we are handling registration via EventBrite.  You can find the <a href="https://www.eventbrite.com/e/flock-to-fedora-2019-tickets-55502933769">Flock 2019 event</a> online now. If you need or think you will need a visa letter to attend Flock, please complete the <a href="https://docs.google.com/forms/d/e/1FAIpQLSexQqHA9gN-KuxT6GAxqN-jt3OXRXThh9qREIkowFLUZ0G7tA/viewform">Event Visa Invitation Letter Request Form</a>.</p>
+          <p>This year we are handling registration via EventBrite.  You can find the <a href="https://www.eventbrite.com/e/flock-to-fedora-2019-tickets-55502933769">Flock 2019 event</a> online now. If you need or think you will need a visa letter to attend Flock, please complete the <a href="https://docs.google.com/forms/d/e/1FAIpQLSexQqHA9gN-KuxT6GAxqN-jt3OXRXThh9qREIkowFLUZ0G7tA/viewform">Event Visa Invitation Letter Request Form</a>. Letters can be requested until 1 month before the event.</p>
           <p>Flock 2019 will, again, feature a small optional registration fee to help offset the costs of swag and lunch.  This fee is scaled by country using the <a href="http://www.economist.com/content/big-mac-index">Big Mac Index</a> and is based on a $25 Fee in the United States.</p>
 <!--
           <p>Information about how to apply for travel funding will be released soon. You should go ahead and register before you have received your funding decision.</p>
