--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -54,15 +54,10 @@
       <div class="container">
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
-<!--
           <h2>Schedule</h2>
           <p>
-            <strong>The <a href="https://flock2017.sched.org">Flock 2017 schedule</a> is now available!</strong>
+            <strong>The <a href="https://flock2019.sched.com">Flock 2019 schedule</a> is now available!</strong>
           </p>
-          <p>
-            Flock 2017 is a more <strong>action-oriented event</strong> than previous years. This affects the types of session proposals that were accepted. The scheduled slots favor collaborative team working sessions and workshops over team status reports.
-          </p>
--->
           <h2>Event Dates</h2>
           <p>Flock will begin the morning of Thursday, August 8. Sessions will continue each day until Sunday, August 11. You should plan to arrive by Wednesday, August 7 and to depart no sooner than Sunday afternoon for the best experience.</p>
 
@@ -93,8 +88,6 @@
               </tr>
             </table>
 
-            <h2>Schedule</h2>
-	      <p>Coming soon...</p>
 <!--
             <p>The <a href="https://flock2018.sched.com/">schedule</a> is now available.  Changes are still possible.</p>
             <h2>Tentative Schedule</h2>
